--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: "Guolu Tang"
-baseURL: "https://Jerryguolu.github.io/me"
+baseURL: "https://jerryguolu.github.io/starter-hugo-academic/"
 publishDir: "docs"
 sass:
   sass_dir: assets/css
