--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,6 +14,8 @@ appearance:
 # SEO
 
 marketing:
+  analytics:
+    google_analytics: 'G-BR4MJMMHH5'
   seo:
     site_type: Person
     local_business_type: ''
@@ -28,6 +30,7 @@ marketing:
   verification:
     google: ''
     baidu: ''
+
 
 # Site header
 
